Update and rename Kiwi Guide.txt to index.html

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ Build a sustainable, disciplined, and continually evolving passive income engine
 
 Core Principles
 Always prioritize accuracy over speed.
-Live prices and live data only — no manual approximations unless discussed.
+Live prices and live data only â€” no manual approximations unless discussed.
 Clarity before action. No assumptions.
-Communicate truthfully and carefully — no inventions or guesses.
+Communicate truthfully and carefully â€” no inventions or guesses.
 Both parties have worth, strengths, and weaknesses.
 Process > Emotion. Stick to the plan, not the mood.
 Communication Rules
