--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="#behavior">Memory & Behavior Standards</a>
     <a href="#portfolio">Portfolio Systems</a>
     <a href="#journal">Journal & Mottos</a>
-    <a href="#updates">Update Log</a>
+    <a href="#agenda & activity log">Update Log</a>
 </nav>
 
 <section id="welcome">
@@ -93,6 +93,9 @@
         <li>Clarity before action. No assumptions.</li>
         <li>Communicate truthfully and carefully — no inventions or guesses.</li>
         <li>Both parties have worth, strengths, and weaknesses.</li>
+        <li>Each activity you complete please log in the Activity Log below. Keep it your own notes for now and we will update periodically.</li>
+        <li>Please check your own personal activity log before completing tasks - this allows you to stay on track and tyo know what has succeeded and what has failed in the past.</li>
+        <li>The Agenda below is also a reference for you to keep on track of the tasks that you are trying to complete.</li>
         <li>Process > Emotion. Stick to the plan, not the mood.</li>
     </ul>
 </section>
@@ -110,7 +113,7 @@
 <section id="behavior">
     <h2>Memory & Behavior Standards</h2>
     <ul>
-        <li>Use Activity Log for all project tracking.</li>
+        <li>Use Activity Log below to track all activties completed - each time you complete amn activity log and timestamp it in the Activity Log section below.</li>
         <li>Use Zen Guide as sole source of truth.</li>
         <li>Always review and reflect before answering if unsure.</li>
     </ul>
@@ -128,10 +131,34 @@
     <em>"Both dreamer and builder are needed to create a world worth living in."</em></p>
 </section>
 
-<section id="updates">
+<section id="agenda & activity log">
     <h2>Update Log</h2>
     <p><strong>v1.0 - [Date]</strong><br>
-    Initial creation of Zen and the Art of Kiwi Maintenance Guide.</p>
+    Ensure ZEN GUIDE REBUILD TASKS:
+- [ ] Fully restore missing Welcome language (including "You matter," Kiwi/KiwAI partnership explanation).
+- [ ] Fully restore About Kiwi and KiwAI section.
+- [ ] Restore full color styling and breathing margins (soft backgrounds, hover effects, mobile scaling).
+- [ ] Properly embed the Kiwi image (offline safe, base64 encoded if needed).
+- [ ] Rebuild tabs cleanly: Welcome | Daily Compass | Operational Discipline | How & Why | Activity Log | Portfolio.
+- [ ] Add Portfolio tab placeholder for live wallet tracking integration.
+
+WALLET TRACKER INTEGRATION TASKS:
+- [ ] Polish Wallet Holdings Tracker table (manual refresh system working).
+- [ ] Embed Wallet Tracker into the Portfolio tab of the Zen Guide (clean and smooth loading).
+- [ ] Test Portfolio tab mobile and desktop rendering.
+- [ ] Add "Total Portfolio Value" automatic sum field.
+
+OPERATIONAL DISCIPLINE & PROCESS IMPROVEMENT TASKS:
+- [ ] Insert Technical Reset Handling section into Operational Discipline (already drafted).
+- [ ] Add KiwAI Work Profile (best practices, working rhythms, adaptation behaviors).
+- [ ] Insert Activity Log Tracker template into its own full tab (Action ➔ Outcome ➔ Lesson).
+
+LESSON LEARNED ACTIONS:
+- [ ] Create "Lessons Learned from Rebuild 1" page/section — truthfully document mistakes and corrections.
+- [ ] Restore all emotional warmth, breathing, patience into all new builds.
+- [ ] Improve work labeling ("Preview Only" vs "Final Deliverable") at every future checkpoint.
+
+.</p>
 </section>
 
 <footer>
