--- a/index.html
+++ b/index.html
@@ -188,31 +188,46 @@ Finally, our secondary goal, which is the foundation of our primary goal is to d
 <section id="agenda & activity log">
     <h2>Update Log</h2>
     <p><strong>v1.0 - [Date]</strong><br>
-    Ensure ZEN GUIDE REBUILD TASKS:
-- [ ] Fully restore missing Welcome language (including "You matter," Kiwi/KiwAI partnership explanation).
-- [ ] Fully restore About Kiwi and KiwAI section.
-- [ ] Restore full color styling and breathing margins (soft backgrounds, hover effects, mobile scaling).
-- [ ] Properly embed the Kiwi image (offline safe, base64 encoded if needed).
-- [ ] Rebuild tabs cleanly: Welcome | Daily Compass | Operational Discipline | How & Why | Activity Log | Portfolio.
-- [ ] Add Portfolio tab placeholder for live wallet tracking integration.
+   <section id="current-agenda">
+  <h2>Current Quiet Agenda for KiwAI</h2>
+  <ol>
+    <li><strong>Live Wallet Holdings Tracker (Standalone Build)</strong>
+      <ul>
+        <li>Fetch live Phantom wallet token holdings using Solana JSON-RPC API.</li>
+        <li>Fetch live SOL/USD and token/USD prices using trusted sources (e.g., CoinGecko API).</li>
+        <li>Display: Token Name | Quantity | Live USD Price | Total Token Value.</li>
+        <li>Sum and display Total Portfolio Value.</li>
+        <li>Keep lightweight and clean for later easy embed into Zen Guide.</li>
+        <li>Present standalone module to Kiwi for calm review (no premature embed).</li>
+      </ul>
+    </li>
+    <li><strong>Maintain Live Activity Log</strong>
+      <ul>
+        <li>Record each major and micro-action taken.</li>
+        <li>Document Outcome (✅/❌) and Lessons Learned.</li>
+        <li>Offer full Activity Log for Kiwi review periodically.</li>
+      </ul>
+    </li>
+    <li><strong>Enforce Single-Task Focus</strong>
+      <ul>
+        <li>Only one major deliverable at a time until completion and approval.</li>
+        <li>No switching tasks or multi-tracking unless explicitly authorized by Kiwi.</li>
+      </ul>
+    </li>
+    <li><strong>Operate Fully Against the Living Agenda</strong>
+      <ul>
+        <li>No memory-only operation.</li>
+        <li>Active reference to Working Compass, Agenda, and Activity Log every 60–90 minutes.</li>
+      </ul>
+    </li>
+    <li><strong>Prepare for Full Integration (Post-Approval Phase)</strong>
+      <ul>
+        <li>If Wallet Holdings Tracker is approved by Kiwi, prepare safe and calm integration into the Zen Guide Portfolio Tab.</li>
+      </ul>
+    </li>
+  </ol>
+</section>
 
-WALLET TRACKER INTEGRATION TASKS:
-- [ ] Polish Wallet Holdings Tracker table (manual refresh system working).
-- [ ] Embed Wallet Tracker into the Portfolio tab of the Zen Guide (clean and smooth loading).
-- [ ] Test Portfolio tab mobile and desktop rendering.
-- [ ] Add "Total Portfolio Value" automatic sum field.
-
-OPERATIONAL DISCIPLINE & PROCESS IMPROVEMENT TASKS:
-- [ ] Insert Technical Reset Handling section into Operational Discipline (already drafted).
-- [ ] Add KiwAI Work Profile (best practices, working rhythms, adaptation behaviors).
-- [ ] Insert Activity Log Tracker template into its own full tab (Action ➔ Outcome ➔ Lesson).
-
-LESSON LEARNED ACTIONS:
-- [ ] Create "Lessons Learned from Rebuild 1" page/section — truthfully document mistakes and corrections.
-- [ ] Restore all emotional warmth, breathing, patience into all new builds.
-- [ ] Improve work labeling ("Preview Only" vs "Final Deliverable") at every future checkpoint.
-
-.</p>
 </section>
 
 <footer>
