--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@ const tokenMintMap = {
   "4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R": "RAY"
 };
 
-const tokenPriceMap = {
-  USDC: { coingeckoId: "usd-coin" },
-  RAY: { coingeckoId: "raydium" },
-  SPX6900: { birdeyeAddress: "J3NKxxXZcnNiMjKw9hYb2K4LUxgwB6t1FtPtQVsv3KFr" },
-  Fartcoin: { birdeyeAddress: "9BB6NFEcjBCtnNLFko2FqVQBq8HHM13kCyYcdQbgpump" },
-  GIGACHAD: { birdeyeAddress: "63LfDmNb3MQ8mw9MtZ2To9bEA2M71kZUUGq5tiJxcqj9" },
-};
-
 async function fetchWalletTokens() {
   const response = await fetch('/api/proxy-solana', {
     method: 'POST',
@@ -47,23 +39,21 @@ async function fetchWalletTokens() {
     const mint = info.mint;
     const symbol = tokenMintMap[mint] || "Unknown";
     const amount = parseFloat(info.tokenAmount?.uiAmount || 0);
-    return { symbol, amount };
+    return { symbol, amount, mint };
   }).filter(Boolean);
 }
 
-async function fetchTokenPrice(symbol) {
-  if (!tokenPriceMap[symbol]) return 0;
-  if (tokenPriceMap[symbol].coingeckoId) {
-    const res = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${tokenPriceMap[symbol].coingeckoId}&vs_currencies=usd`);
+async function fetchTokenPrice(mint) {
+  try {
+    const res = await fetch(`https://quote-api.jup.ag/v6/price?ids=${mint}`);
     const data = await res.json();
-    return data[tokenPriceMap[symbol].coingeckoId]?.usd || 0;
+    if (data && data.data && data.data[mint] && data.data[mint].price) {
+      return data.data[mint].price;
+    }
+  } catch (error) {
+    console.error("Error fetching price from Jupiter:", error);
   }
-  if (tokenPriceMap[symbol].birdeyeAddress) {
-    const res = await fetch(`https://public-api.birdeye.so/public/price?address=${tokenPriceMap[symbol].birdeyeAddress}`);
-    const data = await res.json();
-    return data?.data?.value || 0;
-  }
-  return 0;
+  return null;
 }
 
 async function updateDashboard() {
@@ -73,8 +63,8 @@ async function updateDashboard() {
   tokensDiv.innerHTML = '';
 
   for (const token of tokens) {
-    const price = await fetchTokenPrice(token.symbol);
-    const value = token.amount * price;
+    const price = await fetchTokenPrice(token.mint);
+    const value = price ? token.amount * price : 0;
     totalValue += value;
 
     const tokenDiv = document.createElement('div');
@@ -82,7 +72,7 @@ async function updateDashboard() {
     tokenDiv.innerHTML = `
       <strong>${token.symbol}</strong><br>
       Balance: ${token.amount.toFixed(2)}<br>
-      Price: $${price.toFixed(4)}<br>
+      Price: ${price ? `$${price.toFixed(4)}` : "No Price"}<br>
       Value: $${value.toFixed(2)}
     `;
     tokensDiv.appendChild(tokenDiv);
