--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ async function fetchWalletTokens() {
 
 async function fetchTokenPrice(mint) {
   try {
-    const res = await fetch(`https://quote-api.jup.ag/v6/price?ids=${mint}`);
+    const res = await fetch(`https://price.jup.ag/v4/price?ids=${mint}`);
     const data = await res.json();
     if (data && data.data && data.data[mint] && data.data[mint].price) {
       return data.data[mint].price;
     }
   } catch (error) {
-    console.error("Error fetching price from Jupiter:", error);
+    console.error("Error fetching price from Jupiter Price API:", error);
   }
   return null;
 }
