--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ async function fetchWalletTokens() {
 async function fetchTokenPrice(mint) {
   try {
     const res = await fetch(`https://price.jup.ag/v4/price?ids=${mint}`);
+    if (!res.ok) {
+      console.error(`Failed to fetch price for ${mint}: ${res.status}`);
+      return null;
+    }
     const data = await res.json();
     if (data && data.data && data.data[mint] && data.data[mint].price) {
       return data.data[mint].price;
