--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@ async function fetchWalletTokens() {
 
 async function fetchTokenPrice(mint) {
   try {
-    const lowerMint = mint.toLowerCase();
-    const res = await fetch(`/api/proxy-price?mint=${lowerMint}`);
+    const res = await fetch(`https://public-api.birdeye.so/public/price?address=${mint}`);
     if (!res.ok) {
-      console.warn(`No price found for ${lowerMint}: ${res.status}`);
+      console.warn(`No price found for ${mint}: ${res.status}`);
       return null;
     }
     const data = await res.json();
-    if (data && data.data && data.data[lowerMint] && data.data[lowerMint].price) {
-      return data.data[lowerMint].price;
+    if (data && data.data && typeof data.data.value === 'number') {
+      return data.data.value;
     }
   } catch (error) {
-    console.error("Error fetching price from proxy:", error);
+    console.error("Error fetching price from Birdeye:", error);
   }
   return null;
 }
@@ -92,3 +91,4 @@ setInterval(updateDashboard, 60000);
 
 </body>
 </html>
+
