--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <script>
 const WALLET_ADDRESS = "2eb81eBXidrgW6sSzTDnHTEQpqJpmkANMCSRS1BKjUku";
+const BIRDEYE_API_KEY = "5e03e241b51b4ed3946001c68634ddcf";
 
 const tokenMintMap = {
   "9BB6NFEcjBCtnNLFko2FqVQBq8HHM13kCyYcdQbgpump": "Fartcoin",
@@ -45,7 +46,11 @@ async function fetchWalletTokens() {
 
 async function fetchTokenPrice(mint) {
   try {
-    const res = await fetch(`https://public-api.birdeye.so/market/token_price?address=${mint}`);
+    const res = await fetch(`https://public-api.birdeye.so/market/token_price?address=${mint}`, {
+      headers: {
+        'Authorization': `Bearer ${BIRDEYE_API_KEY}`
+      }
+    });
     if (!res.ok) {
       console.warn(`No price found for ${mint}: ${res.status}`);
       return null;
